update page to be responsive fix x axis overflow

--- a/index.css
+++ b/index.css
@@ -25,13 +25,14 @@ html {
 body {
     color: var(--secondary);
     overflow-x: hidden;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 body,
 nav {
     font-family: 'Oswald', Arial, Helvetica, sans-serif;
 }
+
 
 
 h1,
@@ -59,11 +60,7 @@ h3 {
 }
 
 h4 {
-    font-size: 1.5em;
-}
-
-h5 {
-    font-size: 1.1em;
+    font-size: 2em;
 }
 
 p {
@@ -71,13 +68,16 @@ p {
 }
 
 .button {
-    padding: 6px 12px;
+    padding: 0.5em 0.75em;
     border-radius: 8px;
     border: 2px solid var(--secondary);
     font-size: 1em;
     transition: all 0.2s ease-in-out;
     background-color: var(--secondary);
     color: var(--primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -95,8 +95,44 @@ p {
 
 .navbar {
     padding: 0.75em;
+    background-color: var(--primary);
 }
 
+.loading-spinner-overlay {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.loading-spinner {
+    width: 5em;
+    height: 5em;
+    border-radius: 50%;
+    border: 16px solid var(--primary);
+    border-top: 16px solid var(--red);
+    animation: loading 1s linear infinite;
+}
+
+@keyframes loading {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* mobile styles */
+
+/* search section */
 .search {
     position: relative;
     background-color: var(--primary);
@@ -110,16 +146,15 @@ p {
 .search::before {
     content: '';
     position: absolute;
-    left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
+    left: 50%;
+    bottom: 0;
+    width: 200%;
+    height: 50%;
     background: inherit;
+    transform: translateX(-50%) translateY(50%) scale(0.5);
+    border-bottom-left-radius: 100% 100%;
+    border-bottom-right-radius: 100% 100%;
     z-index: -1;
-    transform: translateY(-15%);
-    scale: 2;
-    border-bottom-left-radius: 50% 50%;
-    border-bottom-right-radius: 50% 50%;
 }
 
 .search h2 {
@@ -143,8 +178,9 @@ p {
     font-size: 1em;
 }
 
+/* foodbank card */
 .foodbank-list {
-    margin-top: 5em;
+    margin-top: 2em;
     padding: 2em;
 }
 
@@ -152,12 +188,13 @@ p {
     border-radius: 8px;
     background-color: var(--secondary);
     padding: 1.5em;
-    margin: 2em 0;
+    margin: 1.5em auto;
     color: var(--primary);
+    width: 100%;
 }
 
 .foodbank-card-text {
-    grid-column: 1/7;
+    grid-column: 1/9;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -165,6 +202,58 @@ p {
     align-items: start;
 }
 
+.foodbank-card-text h4 {
+    margin-bottom: 1em;
+    margin-top: 0;
+}
+
 .foodbank-card-image {
-    grid-column: 8/9;
+    grid-column: 1/9;
+    width: 100%;
+    margin-top: 1.5em;
+}
+
+.foodbank-card-image img {
+    width: 100%;
+}
+
+.foodbank-card p {
+    margin: 0.25em 0;
+}
+
+/* Media queries */
+
+/* small tablet styles */
+@media screen and (min-width: 620px) {
+    body {
+        font-size: 20px;
+    }
+}
+
+/* large tablet & laptop styles */
+@media screen and (min-width: 905px) {
+    .foodbank-card-text {
+        grid-column: 1/5;
+    }
+
+    .foodbank-card-text h4 {
+        margin-bottom: 0.75em;
+    }
+
+    .foodbank-card-image {
+        grid-column: 5/9;
+        margin-top: 0;
+    }
+
+    .foodbank-card p {
+        margin: 0.5em 0;
+    }
+}
+
+/* desktop & large laptop styles */
+@media screen and (min-width: 1200px) {
+    body {
+        font-size: 24px;
+    }
+
 }
